@@ -4,6 +4,9 @@ Products.CMFCalendar Changelog
 2.3.0-alpha (unreleased)
 ------------------------
 
+- Event: Fixed object initialization.
+  Default start and stop times are now rounded and offset-naive.
+
 - Require at least Zope 2.13.4.
 
 - Deal with deprecation warnings for Zope 2.13.
